--- a/flask/Untitled.ipynb
+++ b/flask/Untitled.ipynb
@@ -2,60 +2,232 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class Person:\n",
-    "    login = \"\"\n",
-    "    password = \"\"\n",
-    "    name = \"\""
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "argument of type 'int' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-9bb6ee924dce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\sanya\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mreset_index\u001b[1;34m(self, level, drop, inplace, col_level, col_fill)\u001b[0m\n\u001b[0;32m   3053\u001b[0m                 \u001b[1;31m# to ndarray and maybe infer different dtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3054\u001b[0m                 \u001b[0mlevel_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_maybe_casted_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlab\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3055\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3056\u001b[0m                     \u001b[0mnew_obj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3057\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: argument of type 'int' is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "def correct_reg():\n",
-    "    login = u'qweqwe'\n",
-    "    password = u'qweqwe'\n",
-    "    name = u'qweqwe'\n",
-    "    f = open('database.json','r')\n",
-    "    s = f.read()\n",
-    "    u = json.loads(s)\n",
-    "    print(s)\n",
-    "    person = Person()\n",
-    "    person.name = name\n",
-    "    person.login = login\n",
-    "    person.password = password\n",
-    "    u.append({\"login\":login,\"password\":password,\"name\":name})\n",
-    "    s = json.dumps(u)\n",
-    "    print(u)"
+    "f = open('waiting_list.json','r')\n",
+    "s = f.read()\n",
+    "u = json.loads(s)\n",
+    "train = pd.DataFrame(u)\n",
+    "train.reset_index(level=0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>invite</th>\n",
+       "      <th>name</th>\n",
+       "      <th>role</th>\n",
+       "      <th>school</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5а</td>\n",
+       "      <td>bf7jo06yi8</td>\n",
+       "      <td>Леха</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5д</td>\n",
+       "      <td>q6qv9kcqxs</td>\n",
+       "      <td>Гуля</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3е</td>\n",
+       "      <td>jfyi2b30v9</td>\n",
+       "      <td>Уебок на Грише</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class      invite            name    role school\n",
+       "0    5а  bf7jo06yi8            Леха  Ученик     30\n",
+       "1    5д  q6qv9kcqxs            Гуля  Ученик     30\n",
+       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>invite</th>\n",
+       "      <th>name</th>\n",
+       "      <th>role</th>\n",
+       "      <th>school</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5а</td>\n",
+       "      <td>bf7jo06yi8</td>\n",
+       "      <td>Леха</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5д</td>\n",
+       "      <td>q6qv9kcqxs</td>\n",
+       "      <td>Гуля</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3е</td>\n",
+       "      <td>jfyi2b30v9</td>\n",
+       "      <td>Уебок на Грише</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class      invite            name    role school\n",
+       "0    5а  bf7jo06yi8            Леха  Ученик     30\n",
+       "1    5д  q6qv9kcqxs            Гуля  Ученик     30\n",
+       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = train[train['school']=='30']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\"login\":\"boscatov\", \"password\":\"s17302005\", \"name\":\"РњР°РјРѕРЅС‚РѕРІ РђР»РµРєСЃР°РЅРґСЂ\"},\n",
-      "  {\"login\":\"vicha\", \"password\":\"1234567\", \"name\":\"Р’РёРєС‚РѕСЂРёСЏ Р‘СѓРЅСЏРµРІР°\"}\n",
-      "]\n",
-      "[{'password': 's17302005', 'login': 'boscatov', 'name': 'РњР°РјРѕРЅС‚РѕРІ РђР»РµРєСЃР°РЅРґСЂ'}, {'password': '1234567', 'login': 'vicha', 'name': 'Р’РёРєС‚РѕСЂРёСЏ Р‘СѓРЅСЏРµРІР°'}, {'password': 'qweqwe', 'login': 'qweqwe', 'name': 'qweqwe'}]\n"
+      "[['5а', 'bf7jo06yi8', 'Леха', 'Ученик', '30'], ['5д', 'q6qv9kcqxs', 'Гуля', 'Ученик', '30'], ['3е', 'jfyi2b30v9', 'Уебок на Грише', 'Ученик', '30']]\n"
      ]
     }
    ],
    "source": [
-    "correct_reg()"
+    "d = df.to_dict('records')\n",
+    "print(df.values.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'Ученик', 'school': '30', 'class': '5а', 'name': 'Леха', 'invite': 'bf7jo06yi8'}, {'role': 'Ученик', 'school': '30', 'class': '5д', 'name': 'Гуля', 'invite': 'q6qv9kcqxs'}, {'role': 'Ученик', 'school': '30', 'class': '3е', 'name': 'Уебок на Грише', 'invite': 'jfyi2b30v9'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
    ]
   },
   {
