--- a/flask/Untitled.ipynb
+++ b/flask/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,33 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "argument of type 'int' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-9bb6ee924dce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\Users\\sanya\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mreset_index\u001b[1;34m(self, level, drop, inplace, col_level, col_fill)\u001b[0m\n\u001b[0;32m   3053\u001b[0m                 \u001b[1;31m# to ndarray and maybe infer different dtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3054\u001b[0m                 \u001b[0mlevel_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_maybe_casted_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlab\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3055\u001b[1;33m                 \u001b[1;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3056\u001b[0m                     \u001b[0mnew_obj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3057\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: argument of type 'int' is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = open('waiting_list.json','r')\n",
     "s = f.read()\n",
     "u = json.loads(s)\n",
-    "train = pd.DataFrame(u)\n",
-    "train.reset_index(level=0, inplace=True)"
+    "train = pd.DataFrame(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +82,22 @@
        "      <td>Ученик</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5ш</td>\n",
+       "      <td>m5o9nxpjpo</td>\n",
+       "      <td>Вича Буняева</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0ж</td>\n",
+       "      <td>wsisztvil</td>\n",
+       "      <td>Фрол Гандон</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -104,10 +106,12 @@
        "  class      invite            name    role school\n",
        "0    5а  bf7jo06yi8            Леха  Ученик     30\n",
        "1    5д  q6qv9kcqxs            Гуля  Ученик     30\n",
-       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30"
+       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30\n",
+       "3    5ш  m5o9nxpjpo    Вича Буняева  Ученик     30\n",
+       "4    0ж   wsisztvil     Фрол Гандон  Ученик     30"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,14 +163,6 @@
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5д</td>\n",
-       "      <td>q6qv9kcqxs</td>\n",
-       "      <td>Гуля</td>\n",
-       "      <td>Ученик</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3е</td>\n",
        "      <td>jfyi2b30v9</td>\n",
@@ -174,24 +170,50 @@
        "      <td>Ученик</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5ш</td>\n",
+       "      <td>m5o9nxpjpo</td>\n",
+       "      <td>Вича Буняева</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0ж</td>\n",
+       "      <td>wsisztvil</td>\n",
+       "      <td>Фрол Гандон</td>\n",
+       "      <td>Ученик</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11</td>\n",
+       "      <td>pfqqlfnwsy</td>\n",
+       "      <td>Фрол Уебок</td>\n",
+       "      <td>Учитель</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  class      invite            name    role school\n",
-       "0    5а  bf7jo06yi8            Леха  Ученик     30\n",
-       "1    5д  q6qv9kcqxs            Гуля  Ученик     30\n",
-       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30"
+       "  class      invite            name     role school\n",
+       "0    5а  bf7jo06yi8            Леха   Ученик     30\n",
+       "2    3е  jfyi2b30v9  Уебок на Грише   Ученик     30\n",
+       "3    5ш  m5o9nxpjpo    Вича Буняева   Ученик     30\n",
+       "4    0ж   wsisztvil     Фрол Гандон   Ученик     30\n",
+       "5    11  pfqqlfnwsy      Фрол Уебок  Учитель     30"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = train[train['school']=='30']\n",
+    "df = train[train['invite']!='q6qv9kcqxs']\n",
     "df.head()"
    ]
   },
