--- a/flask/Untitled.ipynb
+++ b/flask/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -14,11 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "f = open('waiting_list.json','r')\n",
+    "f = open('database.json','r')\n",
     "s = f.read()\n",
     "u = json.loads(s)\n",
     "train = pd.DataFrame(u)"
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +53,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>class</th>\n",
-       "      <th>invite</th>\n",
+       "      <th>login</th>\n",
        "      <th>name</th>\n",
+       "      <th>password</th>\n",
        "      <th>role</th>\n",
        "      <th>school</th>\n",
        "    </tr>\n",
@@ -60,42 +63,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5а</td>\n",
-       "      <td>bf7jo06yi8</td>\n",
-       "      <td>Леха</td>\n",
-       "      <td>Ученик</td>\n",
+       "      <td></td>\n",
+       "      <td>director</td>\n",
+       "      <td>Мамонтов Александр</td>\n",
+       "      <td>qwerty</td>\n",
+       "      <td>director</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5д</td>\n",
-       "      <td>q6qv9kcqxs</td>\n",
-       "      <td>Гуля</td>\n",
-       "      <td>Ученик</td>\n",
+       "      <td>7а</td>\n",
+       "      <td>boscatov</td>\n",
+       "      <td>Мамонтов Александр</td>\n",
+       "      <td>qwerty</td>\n",
+       "      <td>pupil</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3е</td>\n",
-       "      <td>jfyi2b30v9</td>\n",
-       "      <td>Уебок на Грише</td>\n",
-       "      <td>Ученик</td>\n",
+       "      <td>7а</td>\n",
+       "      <td>kirasov</td>\n",
+       "      <td>Виктория Буняева</td>\n",
+       "      <td>qwerty</td>\n",
+       "      <td>pupil</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5ш</td>\n",
-       "      <td>m5o9nxpjpo</td>\n",
-       "      <td>Вича Буняева</td>\n",
-       "      <td>Ученик</td>\n",
+       "      <td>7б</td>\n",
+       "      <td>matveev</td>\n",
+       "      <td>Егорик</td>\n",
+       "      <td>qwerty</td>\n",
+       "      <td>pupil</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0ж</td>\n",
-       "      <td>wsisztvil</td>\n",
-       "      <td>Фрол Гандон</td>\n",
-       "      <td>Ученик</td>\n",
+       "      <td>7б</td>\n",
+       "      <td>ivanov</td>\n",
+       "      <td>егорик</td>\n",
+       "      <td>qwerty</td>\n",
+       "      <td>pupil</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -103,15 +111,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  class      invite            name    role school\n",
-       "0    5а  bf7jo06yi8            Леха  Ученик     30\n",
-       "1    5д  q6qv9kcqxs            Гуля  Ученик     30\n",
-       "2    3е  jfyi2b30v9  Уебок на Грише  Ученик     30\n",
-       "3    5ш  m5o9nxpjpo    Вича Буняева  Ученик     30\n",
-       "4    0ж   wsisztvil     Фрол Гандон  Ученик     30"
+       "  class     login                name password      role school\n",
+       "0        director  Мамонтов Александр   qwerty  director     30\n",
+       "1    7а  boscatov  Мамонтов Александр   qwerty     pupil     30\n",
+       "2    7а   kirasov    Виктория Буняева   qwerty     pupil     30\n",
+       "3    7б   matveev              Егорик   qwerty     pupil     30\n",
+       "4    7б    ivanov              егорик   qwerty     pupil     30"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
