Add journal to pupil

--- a/flask/Untitled.ipynb
+++ b/flask/Untitled.ipynb
@@ -1600,6 +1600,250 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "pyt = u'app\\\\static\\\\school\\\\'+school+'\\\\'+cl+'\\\\'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = os.listdir(pyt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Русский язык.csv']"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Русский язык'"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names[0][:len(names[0])-4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pupil = u'Мамонтов Александр'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dfpup = pd.read_csv('example.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = dfpup.columns\n",
+    "dfpup.loc[len(dfpup)] = s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sub in names:\n",
+    "    temp = pd.read_csv(pyt+sub)\n",
+    "    row = temp[temp['pup']==pupil]\n",
+    "    row.iloc[0]['pup'] = sub[:len(sub)-4:]\n",
+    "    dfpup = pd.concat([dfpup,row])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pup</th>\n",
+       "      <th>01.09.2017</th>\n",
+       "      <th>02.09.2017</th>\n",
+       "      <th>03.09.2017</th>\n",
+       "      <th>04.09.2017</th>\n",
+       "      <th>05.09.2017</th>\n",
+       "      <th>06.09.2017</th>\n",
+       "      <th>07.09.2017</th>\n",
+       "      <th>08.09.2017</th>\n",
+       "      <th>09.09.2017</th>\n",
+       "      <th>...</th>\n",
+       "      <th>22.05.2018</th>\n",
+       "      <th>23.05.2018</th>\n",
+       "      <th>24.05.2018</th>\n",
+       "      <th>25.05.2018</th>\n",
+       "      <th>26.05.2018</th>\n",
+       "      <th>27.05.2018</th>\n",
+       "      <th>28.05.2018</th>\n",
+       "      <th>29.05.2018</th>\n",
+       "      <th>30.05.2018</th>\n",
+       "      <th>31.05.2018</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pup</td>\n",
+       "      <td>01.09.2017</td>\n",
+       "      <td>02.09.2017</td>\n",
+       "      <td>03.09.2017</td>\n",
+       "      <td>04.09.2017</td>\n",
+       "      <td>05.09.2017</td>\n",
+       "      <td>06.09.2017</td>\n",
+       "      <td>07.09.2017</td>\n",
+       "      <td>08.09.2017</td>\n",
+       "      <td>09.09.2017</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.05.2018</td>\n",
+       "      <td>23.05.2018</td>\n",
+       "      <td>24.05.2018</td>\n",
+       "      <td>25.05.2018</td>\n",
+       "      <td>26.05.2018</td>\n",
+       "      <td>27.05.2018</td>\n",
+       "      <td>28.05.2018</td>\n",
+       "      <td>29.05.2018</td>\n",
+       "      <td>30.05.2018</td>\n",
+       "      <td>31.05.2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Русский язык</td>\n",
+       "      <td>5$com$Бегал по потолку</td>\n",
+       "      <td>qrq.com.qwrqwr</td>\n",
+       "      <td>eg.com.sdgsg</td>\n",
+       "      <td>sh.com.sdh</td>\n",
+       "      <td>123.com.123</td>\n",
+       "      <td>asfasf.com.asfasfas</td>\n",
+       "      <td>avgq.com.qwgqw</td>\n",
+       "      <td>svbsb.com.sdbsdb</td>\n",
+       "      <td>sbsdbs.com.sdbsdb</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 274 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            pup              01.09.2017       02.09.2017    03.09.2017  \\\n",
+       "0           pup              01.09.2017       02.09.2017    03.09.2017   \n",
+       "1  Русский язык  5$com$Бегал по потолку   qrq.com.qwrqwr  eg.com.sdgsg   \n",
+       "\n",
+       "    04.09.2017   05.09.2017            06.09.2017       07.09.2017  \\\n",
+       "0   04.09.2017   05.09.2017            06.09.2017       07.09.2017   \n",
+       "1   sh.com.sdh  123.com.123   asfasf.com.asfasfas   avgq.com.qwgqw   \n",
+       "\n",
+       "          08.09.2017          09.09.2017     ...      22.05.2018  23.05.2018  \\\n",
+       "0         08.09.2017          09.09.2017     ...      22.05.2018  23.05.2018   \n",
+       "1   svbsb.com.sdbsdb   sbsdbs.com.sdbsdb     ...                               \n",
+       "\n",
+       "   24.05.2018  25.05.2018  26.05.2018  27.05.2018  28.05.2018  29.05.2018  \\\n",
+       "0  24.05.2018  25.05.2018  26.05.2018  27.05.2018  28.05.2018  29.05.2018   \n",
+       "1                                                                           \n",
+       "\n",
+       "   30.05.2018  31.05.2018  \n",
+       "0  30.05.2018  31.05.2018  \n",
+       "1                          \n",
+       "\n",
+       "[2 rows x 274 columns]"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfpup"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
