--- a/flask/Untitled.ipynb
+++ b/flask/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -11,6 +11,276 @@
     "import pandas as pd\n",
     "import json"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f = open(u'app\\\\static\\\\school\\\\30\\\\events\\\\director.json','r')\n",
+    "s = f.read()\n",
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "path = u'app\\\\static\\\\school\\\\30\\\\class\\\\'\n",
+    "data = os.listdir(path=path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['7а']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "eve = json.loads(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "eve = eve['events']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'end': '2018-02-20T13:30:00.000Z',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 1,\n",
+       "  'start': '2018-02-20T12:00:00.000Z',\n",
+       "  'title': 'Сас Лехи'},\n",
+       " {'end': '2018-02-21T14:45:00.000Z',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 2,\n",
+       "  'start': '2018-02-21T14:00:00.000Z',\n",
+       "  'title': 'Митинг с Лехой'},\n",
+       " {'body': '',\n",
+       "  'end': '2018-02-20T06:30:00.000Z',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 3,\n",
+       "  'start': '2018-02-20T06:00:00.000Z',\n",
+       "  'title': 'Стрижка Лехи'},\n",
+       " {'end': ' 2018-02-23T13:00:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 4,\n",
+       "  'start': ' 2018-02-23T11:30:00.000Z\"',\n",
+       "  'title': 'Завтрак с Лехой'},\n",
+       " {'end': '2018-02-22T15:00:00.000Z',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 5,\n",
+       "  'start': '2018-02-22T14:00:00.000Z',\n",
+       "  'title': 'Показ Лехи'},\n",
+       " {'end': '2018-02-21T10:00:00.000Z',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 6,\n",
+       "  'readOnly': True,\n",
+       "  'start': '2018-02-21T09:00:00.000Z',\n",
+       "  'title': 'Леха для чтения'},\n",
+       " {'body': '',\n",
+       "  'end': '2018-02-19T11:00:00.000Z',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': '2018-02-19T10:30:00.000Z',\n",
+       "  'title': '23'},\n",
+       " {'body': '',\n",
+       "  'end': '2018-02-19T12:30:00.000Z',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': '2018-02-19T12:00:00.000Z',\n",
+       "  'title': '123'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-19T09:45:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-19T09:15:00.000Z\"',\n",
+       "  'title': 'sacasc'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T07:00:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T06:30:00.000Z\"',\n",
+       "  'title': 'dirtest'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T07:30:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T07:15:00.000Z\"',\n",
+       "  'title': 'dirtest2'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T08:00:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T07:30:00.000Z\"',\n",
+       "  'title': 'dirtest3'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T08:45:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T08:15:00.000Z\"',\n",
+       "  'title': 'dirtest4'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T09:15:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T08:45:00.000Z\"',\n",
+       "  'title': 'dirtest5'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T09:45:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T09:15:00.000Z\"',\n",
+       "  'title': 'dirtest6'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T10:15:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T09:45:00.000Z\"',\n",
+       "  'title': 'dirtest7'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T10:45:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T10:15:00.000Z\"',\n",
+       "  'title': 'dirtest8'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T11:15:00.000Z\"',\n",
+       "  'filtr': 'Внеучебка',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T10:45:00.000Z\"',\n",
+       "  'title': 'dirtest9'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T12:00:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T11:30:00.000Z\"',\n",
+       "  'title': 'dirtest10'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T12:45:00.000Z\"',\n",
+       "  'filtr': 'Школа',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T12:15:00.000Z\"',\n",
+       "  'title': 'dirtest11'},\n",
+       " {'body': '',\n",
+       "  'end': ' 2018-02-22T13:15:00.000Z\"',\n",
+       "  'filtr': 'Пиздец',\n",
+       "  'id': 10,\n",
+       "  'start': ' 2018-02-22T12:45:00.000Z\"',\n",
+       "  'title': 'dirtest12'}]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(eve,columns=['end','filtr','id','start','title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df[df.filtr == 'klrmle'],df[df.filtr == 'ergerg']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -35,6 +305,136 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('example.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path =  u'app\\\\static\\\\school\\\\30\\\\events\\\\director.json'\n",
+    "f = open(path,'r')\n",
+    "s = f.read()\n",
+    "f.close()\n",
+    "u = json.loads(s)\n",
+    "u = u['events']\n",
+    "df = pd.DataFrame(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>end</th>\n",
+       "      <th>filtr</th>\n",
+       "      <th>id</th>\n",
+       "      <th>readOnly</th>\n",
+       "      <th>start</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-20T13:30:00.000Z</td>\n",
+       "      <td>РЁРєРѕР»Р°</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-20T12:00:00.000Z</td>\n",
+       "      <td>РЎР°СЃ Р›РµС…Рё</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-21T14:45:00.000Z</td>\n",
+       "      <td>Р’РЅРµСѓС‡РµР±РєР°</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-21T14:00:00.000Z</td>\n",
+       "      <td>РњРёС‚РёРЅРі СЃ Р›РµС…РѕР№</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-20T06:30:00.000Z</td>\n",
+       "      <td>РЁРєРѕР»Р°</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-20T06:00:00.000Z</td>\n",
+       "      <td>РЎС‚СЂРёР¶РєР° Р›РµС…Рё</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-23T13:00:00.000Z\"</td>\n",
+       "      <td>Р’РЅРµСѓС‡РµР±РєР°</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-23T11:30:00.000Z\"</td>\n",
+       "      <td>Р—Р°РІС‚СЂР°Рє СЃ Р›РµС…РѕР№</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-22T15:00:00.000Z</td>\n",
+       "      <td>РЁРєРѕР»Р°</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-02-22T14:00:00.000Z</td>\n",
+       "      <td>РџРѕРєР°Р· Р›РµС…Рё</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  body                         end               filtr  id readOnly  \\\n",
+       "0  NaN    2018-02-20T13:30:00.000Z          РЁРєРѕР»Р°   1      NaN   \n",
+       "1  NaN    2018-02-21T14:45:00.000Z  Р’РЅРµСѓС‡РµР±РєР°   2      NaN   \n",
+       "2         2018-02-20T06:30:00.000Z          РЁРєРѕР»Р°   3      NaN   \n",
+       "3  NaN   2018-02-23T13:00:00.000Z\"  Р’РЅРµСѓС‡РµР±РєР°   4      NaN   \n",
+       "4  NaN    2018-02-22T15:00:00.000Z          РЁРєРѕР»Р°   5      NaN   \n",
+       "\n",
+       "                        start                         title  \n",
+       "0    2018-02-20T12:00:00.000Z               РЎР°СЃ Р›РµС…Рё  \n",
+       "1    2018-02-21T14:00:00.000Z    РњРёС‚РёРЅРі СЃ Р›РµС…РѕР№  \n",
+       "2    2018-02-20T06:00:00.000Z       РЎС‚СЂРёР¶РєР° Р›РµС…Рё  \n",
+       "3   2018-02-23T11:30:00.000Z\"  Р—Р°РІС‚СЂР°Рє СЃ Р›РµС…РѕР№  \n",
+       "4    2018-02-22T14:00:00.000Z           РџРѕРєР°Р· Р›РµС…Рё  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -112,7 +512,9 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cl = '7а'\n",
@@ -123,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base = train[train['school']==school]"
@@ -132,7 +536,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base = base[base['class']==cl]"
@@ -401,7 +807,9 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.iloc[int('1')]['01.09.2017'] = '5.com.Бегал по потолку'"
@@ -430,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv(path, index_label=False,index=False,encoding='utf-8')"
@@ -439,7 +849,9 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aa = pd.read_csv(path,encoding = \"utf-8\")"
@@ -1574,6 +1986,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f = open('database.json','r')\n",
+    "s = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame([],columns=['1','2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
    "outputs": [
@@ -1686,7 +2141,9 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s = dfpup.columns\n",
@@ -1696,7 +2153,9 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for sub in names:\n",
